--- a/app/src/main/res/layout/activity_bind_device.xml
+++ b/app/src/main/res/layout/activity_bind_device.xml
@@ -87,16 +87,16 @@
             hunt:textColor="@color/color_383838"
             hunt:textSize="@dimen/sp16" />
 
-        <com.cylan.jiafeigou.widget.HomeMineItemView
-            android:id="@+id/v_to_bind_cloud_album"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/y67"
-            android:background="@color/color_white"
-            hunt:leftDrawable="@drawable/icon_home_album_online"
-            hunt:rightDrawable="@drawable/icon_mine_arrow_next"
-            hunt:text="云相框"
-            hunt:textColor="@color/color_383838"
-            hunt:textSize="@dimen/sp16" />
+        <!--<com.cylan.jiafeigou.widget.HomeMineItemView-->
+            <!--android:id="@+id/v_to_bind_cloud_album"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="@dimen/y67"-->
+            <!--android:background="@color/color_white"-->
+            <!--hunt:leftDrawable="@drawable/icon_home_album_online"-->
+            <!--hunt:rightDrawable="@drawable/icon_mine_arrow_next"-->
+            <!--hunt:text="云相框"-->
+            <!--hunt:textColor="@color/color_383838"-->
+            <!--hunt:textSize="@dimen/sp16" />-->
     </LinearLayout>
 
     <FrameLayout
