--- a/app/src/main/res/layout/view_video_detail.xml
+++ b/app/src/main/res/layout/view_video_detail.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:hunt="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
     <com.cylan.jiafeigou.widget.ShadowFrameLayout
@@ -18,21 +17,24 @@
             android:layout_height="match_parent"
             android:visibility="invisible" />
 
+        <com.cylan.jiafeigou.widget.SimpleProgressBar
+            android:id="@+id/view_media_video_loading_bar"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/x5"
+            app:progress_point_radius="@dimen/y2"
+            app:progress_radius="@dimen/y20"
+            app:progress_stroke_color="@color/color_white"
+            android:visibility="visible"
+            app:progress_swipe_degree="310"  />
+
+
+
         <ImageView
             android:id="@+id/view_video_picture"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY" />
-
-        <com.cylan.jiafeigou.widget.SimpleProgressBar
-            android:id="@+id/view_media_video_loading_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="@dimen/x10"
-            android:visibility="invisible"
-            app:progress_point_radius="@dimen/x3"
-            app:progress_stroke_color="#CECECE"
-            hunt:progress_radius="@dimen/x50" />
     </com.cylan.jiafeigou.widget.ShadowFrameLayout>
 </FrameLayout>
