--- a/app/src/main/res/layout/fragment_agreement.xml
+++ b/app/src/main/res/layout/fragment_agreement.xml
@@ -10,8 +10,7 @@
     <include
         layout="@layout/layout_top_bar_item"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y48"
-        android:layout_marginTop="@dimen/y60" />
+        android:layout_height="@dimen/y48" />
 
     <WebView
         android:id="@+id/webView"
