--- a/app/src/main/res/layout/fragment_facility_information.xml
+++ b/app/src/main/res/layout/fragment_facility_information.xml
@@ -127,6 +127,7 @@
 
             <!-- “储存”相关模块 -->
             <LinearLayout
+                android:id="@+id/ll_SDcard_item"
                 style="@style/information_item"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y72"
@@ -156,6 +157,45 @@
                     android:background="@color/color_f2f2f2"
                     android:visibility="gone" />
             </LinearLayout>
+
+
+            <RelativeLayout
+                android:id="@+id/rl_hardware_update"
+                style="@style/information_item"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/y72"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/update_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/y15"
+                    android:text="固件升级"
+                    android:textColor="#000000"
+                    android:textSize="@dimen/sp16" />
+
+                <TextView
+                    android:layout_below="@id/update_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/y3"
+                    android:text="新固件"
+                    android:textColor="#8C8C8C"
+                    android:textSize="@dimen/sp13" />
+
+                <View
+                    android:id="@+id/hardware_update_point"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/hardware_update_point"
+                    android:layout_width="@dimen/x7"
+                    android:layout_height="@dimen/y7"/>
+
+
+            </RelativeLayout>
+
+
 
             <!-- “网络”相关模块 -->
             <!-- 移动网络 -->
