--- a/app/src/main/res/layout/fragment_agreement.xml
+++ b/app/src/main/res/layout/fragment_agreement.xml
@@ -7,11 +7,10 @@
     android:clickable="true"
     android:orientation="vertical">
 
-    <include
-        layout="@layout/layout_top_bar_item"
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y48"
-        android:layout_marginTop="@dimen/y60" />
+        android:layout_height="wrap_content" />
 
     <WebView
         android:id="@+id/webView"
