--- a/app/src/main/res/layout/fragment_wifi_list.xml
+++ b/app/src/main/res/layout/fragment_wifi_list.xml
@@ -6,7 +6,10 @@
     android:orientation="vertical"
     tools:context="com.cylan.jiafeigou.n.view.setting.WifiListFragment">
 
-    <include layout="@layout/layout_top_bar_item" />
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/sw_refresh_wifi"
