--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -105,4 +105,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="color_47C6A7">#47C6A7</color>
+    <color name="color_6FA3FD">#6FA3FD</color>
 </resources>
