--- a/app/src/main/res/layout/fragment_bind_guide.xml
+++ b/app/src/main/res/layout/fragment_bind_guide.xml
@@ -6,14 +6,17 @@
     android:clickable="true"
     tools:context="com.cylan.jiafeigou.n.view.bind.BindGuideFragment">
 
-    <include layout="@layout/layout_top_bar_item" />
 
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tv_guide_main_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/fLayout_top_bar"
+        android:layout_below="@+id/fLayout_toolbar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/y20"
         android:text="@string/WIFI_SET_3"
