--- a/app/src/main/res/layout/fragment_bind_scan.xml
+++ b/app/src/main/res/layout/fragment_bind_scan.xml
@@ -14,7 +14,7 @@
         hunt:hint="@string/EFAMILY_QRCODE_BOTTOM_TEXT" />
 
     <FrameLayout
-        android:id="@+id/fLayout_top_bar"
+        android:id="@+id/fLayout_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
