--- a/app/src/main/res/layout/fragment_config_ap.xml
+++ b/app/src/main/res/layout/fragment_config_ap.xml
@@ -8,8 +8,11 @@
     android:orientation="vertical"
     tools:context=".n.view.bind.ConfigApFragment">
 
-    <include layout="@layout/layout_top_bar_item" />
 
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <ViewSwitcher
         android:id="@+id/vs_show_content"
         android:layout_width="match_parent"
