--- a/app/src/main/res/layout/fragment_facility_information.xml
+++ b/app/src/main/res/layout/fragment_facility_information.xml
@@ -6,31 +6,11 @@
     android:orientation="vertical">
 
     <!-- 顶部栏 -->
-    <LinearLayout
+
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <FrameLayout
-            android:id="@+id/fLayout_top_bar_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/color_0ba8cf">
-
-            <TextView
-                android:id="@+id/imgV_top_bar_center"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/y48"
-                android:drawableLeft="@drawable/nav_tab_back_selector"
-                android:drawablePadding="@dimen/x15"
-                android:gravity="center_vertical"
-                android:paddingLeft="@dimen/x15"
-                android:text="@string/EQUIPMENT_INFO"
-                android:textColor="@color/color_white"
-                android:textSize="@dimen/sp18" />
-        </FrameLayout>
-    </LinearLayout>
-
+        android:layout_height="wrap_content" />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -127,6 +107,7 @@
 
             <!-- “储存”相关模块 -->
             <LinearLayout
+                android:id="@+id/lLayout_sdcard"
                 style="@style/information_item"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y72"
