--- a/app/src/main/res/layout/fragment_safe_protection.xml
+++ b/app/src/main/res/layout/fragment_safe_protection.xml
@@ -9,7 +9,11 @@
     android:orientation="vertical"
     tools:context="com.cylan.jiafeigou.n.view.cam.SafeProtectionFragment">
 
-    <include layout="@layout/layout_toolbar" />
+
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <View
         android:layout_width="match_parent"
