--- a/app/src/main/res/layout/fragment_setup_pwd.xml
+++ b/app/src/main/res/layout/fragment_setup_pwd.xml
@@ -13,25 +13,27 @@
         android:layout_width="@dimen/x1"
         android:layout_height="@dimen/y60" />
 
-    <include
-        android:id="@+id/rLayout_login_top"
-        layout="@layout/layout_top_bar_item" />
+    <com.cylan.jiafeigou.widget.CustomToolbar
+
+        android:id="@+id/custom_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <!--<include layout="@layout/simple_input_box" />-->
 
     <ViewSwitcher
-        android:inAnimation="@anim/slide_in_right_overshoot"
-        android:outAnimation="@anim/slide_out_left"
         android:id="@+id/vs_set_account_pwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/x19"
-        android:layout_marginRight="@dimen/x19">
+        android:layout_marginRight="@dimen/x19"
+        android:inAnimation="@anim/slide_in_right_overshoot"
+        android:outAnimation="@anim/slide_out_left">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <FrameLayout
                 android:id="@+id/fl_input_container"
@@ -102,7 +104,6 @@
                 android:text="@string/CARRY_ON" />
 
         </LinearLayout>
-
 
 
     </ViewSwitcher>
