--- a/app/src/main/res/layout/fragment_alarm_sound_effect.xml
+++ b/app/src/main/res/layout/fragment_alarm_sound_effect.xml
@@ -2,12 +2,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:background="@color/color_white"
     android:clickable="true"
     android:orientation="vertical"
     tools:context="com.cylan.jiafeigou.n.view.cam.AlarmSoundEffectFragment">
 
-    <include layout="@layout/layout_toolbar" />
+    <com.cylan.jiafeigou.widget.CustomToolbar
+        android:id="@+id/custom_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
+        hunt:ct_left_title="@string/SOUNDS"
+        hunt:ct_left_title_color="@color/color_white"
+        hunt:ct_title_color="@color/color_black" />
 
     <View
         android:layout_width="match_parent"
