--- a/app/src/main/res/layout/fragment_login_layout.xml
+++ b/app/src/main/res/layout/fragment_login_layout.xml
@@ -18,6 +18,7 @@
         android:id="@+id/rLayout_login_top"
         android:layout_width="match_parent"
         android:layout_height="@dimen/y48"
+        hunt:ct_title_color="@color/color_black"
         hunt:ct_icon="@drawable/login_btn_close"
         hunt:ct_title="@string/LOGIN" />
 
