--- a/app/src/main/res/layout/fragment_safe_protection.xml
+++ b/app/src/main/res/layout/fragment_safe_protection.xml
@@ -13,7 +13,12 @@
     <com.cylan.jiafeigou.widget.CustomToolbar
         android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        hunt:ct_background_color="@color/color_0ba8cf"
+        hunt:ct_left_title_color="@color/color_white"
+        hunt:ct_icon="@drawable/nav_icon_back_white"
+        hunt:ct_title_color="@color/color_white"
+        hunt:ct_left_title="@string/SECURE" />
 
     <View
         android:layout_width="match_parent"
