--- a/app/src/main/res/layout/fragment_setup_pwd.xml
+++ b/app/src/main/res/layout/fragment_setup_pwd.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,10 +15,10 @@
         android:layout_height="@dimen/y60" />
 
     <com.cylan.jiafeigou.widget.CustomToolbar
-
         android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        hunt:ct_title_color="@color/color_black" />
 
     <!--<include layout="@layout/simple_input_box" />-->
 
