--- a/app/src/main/res/layout/layout_custom_tool_bar.xml
+++ b/app/src/main/res/layout/layout_custom_tool_bar.xml
@@ -10,9 +10,10 @@
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
         android:clickable="true"
+        android:drawablePadding="@dimen/x15"
+        android:gravity="center_vertical"
         android:paddingLeft="@dimen/x15"
         android:paddingRight="@dimen/x15"
-        android:textColor="@color/color_white"
         android:textSize="@dimen/sp18" />
 
     <TextView
